Fixed the geoCode by ID